[package]
name = "rust-mav-gateway"
version = "0.1.0"
edition = "2024"

[dependencies]
tokio = { version = "1.45.1", features = ["full"] }
serde = { version = "1.0", features = ["derive"] }
axum = "0.8.4"
serde_yaml = "0.9.34"
serde_json = "1.0.140"
mavlink = "0.14.1"
tracing = "0.1.41"
tower-http = {version="0.6.4", features = ["cors"]}
tracing-subscriber = "0.3.19"
